<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/edittext_border_color">

    <TextView
        android:id="@+id/tv_nom_item_personne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/et_nom_item_personne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_border_color"
        android:singleLine="true"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/tv_fonction_item_personne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fonction"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/et_fonction_item_personne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_border_color"
        android:singleLine="true"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/tv_fixe_item_personne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone_fixe"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/et_fixe_item_personne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_border_color"
        android:singleLine="true"
        android:textSize="11sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_portable_item_personne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone_portable"
            android:textSize="11sp" />
        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_portable_item_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_border_color"
        android:singleLine="true"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/tv_mail_item_personne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/et_mail_item_personne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_border_color"
        android:singleLine="true"
        android:textSize="11sp" />

</LinearLayout>